src/main/resources/templates/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {name}-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ui
    tackle: {name}
