src/main/resources/templates/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {name}-ui
  annotations:
    "console.alpha.openshift.io/overview-app-route": true
spec:
  rules:
    - host: {name}-ui{host}
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: {name}-ui
                  port:
                    number: 8080
